# botobot

./: README.md  pyproject.toml
src/botobot/: __init__.py  agent.py  main.py
